Added columns for difference in one team's offense and the other's defense

--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Baseline Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will first build some basic models."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +56,7 @@
        "       'goalkeeeper_overall_diff', 'growth_diff', 'midfield_diff',\n",
        "       'overall_diff', 'prestige_diff', 'start_age_diff',\n",
        "       'value_euros_millions_diff', 'wage_euros_thousands_diff',\n",
+       "       'attack_home_defence_away_diff', 'attack_away_defence_home_diff',\n",
        "       'cur_year_avg_weighted_diff', 'cur_year_avg_diff',\n",
        "       'last_year_avg_weighted_diff', 'last_year_avg_diff',\n",
        "       'previous_points_diff', 'rank_change_diff', 'rank_diff',\n",
@@ -51,7 +66,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,8 +76,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our most basic model would be to just predict the majority class every time. In this case, `home_win` = 1 is the majority class. What are is the training accuracy from just doing this \"prediction\"? "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4493341053850608"
+      ]
+     },
+     "execution_count": 399,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['home_win'].value_counts()[1] / len(train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pretty decent when we have 3 classes. What about the test accuracy? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 400,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.421875"
+      ]
+     },
+     "execution_count": 400,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test['home_win'], np.ones(len(test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Still decent. Any model we build should be better than this test accuracy of just guessing.\n",
+    "\n",
+    "Our baseline model will be pretty simple. We will utilize the differences in FIFA rankings, offense ratings, defense ratings, midfield ratings, and overall ratings. We will make a train and validation set out of the original train set. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,22 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(2018)\n",
-    "train, validation = train_test_split(train, test_size = 0.2)\n",
-    "y_train = train['home_win'].ravel()\n",
-    "X_train = train.drop('home_win', axis = 1)\n",
-    "y_validation = validation.loc[:,'home_win'].ravel()\n",
-    "X_validation = validation.drop(['home_win'], axis = 1)\n",
+    "np.random.seed(1)\n",
+    "X_train, X_validation = train_test_split(train, test_size = 0.2)\n",
+    "y_train = X_train['home_win'].ravel()\n",
+    "X_train = X_train.drop(['home_win'], axis = 1)\n",
+    "y_validation = X_validation['home_win'].ravel()\n",
+    "X_validation = X_validation.drop(['home_win'], axis = 1)\n",
     "y_test = test['home_win'].ravel()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will first try out logistic regression. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,26 +181,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5228095582910934\n",
-      "0.5028901734104047\n"
+      "Logistic Regression Train Score: 0.5206372194062274\n",
+      "Logistic Regression Validation Score: 0.5260115606936416\n"
      ]
     }
    ],
    "source": [
-    "print(lr_model.score(X_train, y_train))\n",
-    "print(lr_model.score(X_validation, y_validation))"
+    "print(\"Logistic Regression Train Score: {}\".format(lr_model.score(X_train, y_train)))\n",
+    "print(\"Logistic Regression Validation Score: {}\".format(lr_model.score(X_validation, y_validation)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also try out Linear Discriminant Analysis. However, we need to first check whether the variances across the three outcomes are equal. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 405,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rank_diff</th>\n",
+       "      <th>attack_diff</th>\n",
+       "      <th>defence_diff</th>\n",
+       "      <th>midfield_diff</th>\n",
+       "      <th>overall_diff</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_win</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1031.324335</td>\n",
+       "      <td>41.178286</td>\n",
+       "      <td>36.447164</td>\n",
+       "      <td>36.358733</td>\n",
+       "      <td>30.316051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1030.878211</td>\n",
+       "      <td>43.164681</td>\n",
+       "      <td>38.173861</td>\n",
+       "      <td>37.613713</td>\n",
+       "      <td>31.811819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1100.677884</td>\n",
+       "      <td>42.149203</td>\n",
+       "      <td>40.387636</td>\n",
+       "      <td>36.910224</td>\n",
+       "      <td>32.722352</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            rank_diff  attack_diff  defence_diff  midfield_diff  overall_diff\n",
+       "home_win                                                                     \n",
+       "0         1031.324335    41.178286     36.447164      36.358733     30.316051\n",
+       "1         1030.878211    43.164681     38.173861      37.613713     31.811819\n",
+       "2         1100.677884    42.149203     40.387636      36.910224     32.722352"
+      ]
+     },
+     "execution_count": 405,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.groupby('home_win').var()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Surprisingly, they are actually quite similar! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,26 +310,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5170166545981173\n",
-      "0.5144508670520231\n"
+      "LDA Train Score: 0.5184648805213613\n",
+      "LDA Validation Score: 0.5173410404624278\n"
      ]
     }
    ],
    "source": [
-    "print(lda_model.score(X_train, y_train))\n",
-    "print(lda_model.score(X_validation, y_validation))"
+    "print(\"LDA Train Score: {}\".format(lda_model.score(X_train, y_train)))\n",
+    "print(\"LDA Validation Score: {}\".format(lda_model.score(X_validation, y_validation)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also try out Quadratic Discriminant Analysis, which should perform similarly to LDA in this case due to the almost equal variances."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,26 +345,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5286024619840695\n",
-      "0.5028901734104047\n"
+      "QDA Train Score: 0.5141202027516293\n",
+      "QDA Validation Score: 0.5173410404624278\n"
      ]
     }
    ],
    "source": [
-    "print(qda_model.score(X_train, y_train))\n",
-    "print(qda_model.score(X_validation, y_validation))"
+    "print(\"QDA Train Score: {}\".format(qda_model.score(X_train, y_train)))\n",
+    "print(\"QDA Validation Score: {}\".format(qda_model.score(X_validation, y_validation)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,15 +373,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5619116582186822\n",
-      "0.5057803468208093\n"
+      "0.55756698044895\n",
+      "0.5346820809248555\n"
      ]
     }
    ],
@@ -199,122 +392,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.44750181028240404\n",
-      "0.45664739884393063\n"
+      "Logistic Regression Test Score: 0.59375\n"
      ]
     }
    ],
    "source": [
-    "print(accuracy_score(np.ones(len(y_train)), y_train))\n",
-    "print(accuracy_score(np.ones(len(y_validation)), y_validation))"
+    "print(\"Logistic Regression Test Score: {}\".\n",
+    "                format(accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, lr_model))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.59375"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LDA Test Score: 0.59375\n"
+     ]
     }
    ],
    "source": [
-    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, lr_model))"
+    "print(\"LDA Test Score: {}\".format(\n",
+    "    accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, lda_model))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.59375"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QDA Test Score: 0.640625\n"
+     ]
     }
    ],
    "source": [
-    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, lda_model))"
+    "print(\"QDA Test Score: {}\".format(\n",
+    "    accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, qda_model))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.59375"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, qda_model))"
+    "print(\"Random Forest Test Score: {}\".format(\n",
+    "    accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, rf_model))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.625"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, rf_model))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.421875"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(np.ones(len(y_test)), y_test)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
