Added some comments to baseline model

--- a/doc/milestone3.ipynb
+++ b/doc/milestone3.ipynb
@@ -28,10 +28,7 @@
     "\n",
     "* The other scraper scrapes information about countries like GDP PPP (https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)), population (https://en.wikipedia.org/wiki/List_of_countries_by_population_(United_Nations)), and average yearly temperature (https://en.wikipedia.org/wiki/List_of_countries_by_average_yearly_temperature).\n",
     "\n",
-    "\n",
-    "https://data.worldbank.org/indicator/NY.GDP.MKTP.PP.KD?name_desc=false\n",
-    "https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD\n",
-    "\n"
+    "https://www.kaggle.com/hugomathien/soccer\n"
    ]
   },
   {
@@ -64,7 +61,16 @@
     "\n",
     "Since this was a decision we had to make, the final dataset might reflect some bias on our part, but we hope that this bias does not affect our model that much.\n",
     "\n",
-    "All cleaned datasets can be found in the `data/cleaned` folder.\n"
+    "All cleaned datasets can be found in the `data/cleaned` folder.\n",
+    "\n",
+    "    \n",
+    "### European Soccer Database\n",
+    "\n",
+    "\n",
+    "[Link](../_build/html/european_league/clean_european_league.html)\n",
+    "\n",
+    "\n",
+    "### Sofifa"
    ]
   },
   {
@@ -75,13 +81,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Because in the case of the World Cup, home team does not actually mean anything (besides for Russia itself), we needed each feature in our models to be agnostic to which team is home and which team is away so that so that switching home team and away team does not result in different predictions despite everything else being the same. The most simple way to do so that also makes sense is to take the difference of home team features with away team features, as we can think of these as being difference in skills/abilities of the teams. \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,13 +97,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### European Soccer Database\n",
+    "[Link](../_build/html/european_league/explore_european_league.html)\n",
+    "\n",
+    "### Sofifa"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,11 +116,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "We have two different simple baseline models, one where we just guess the majority outcome every time (home team wins), and the other where we utilize the FIFA rankings as well as some basic team features, including difference in attack ratings, difference in defense ratings, and difference in midfield ratings. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -132,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
