--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "2         1100.677884    42.149203     40.387636      36.910224     32.722352"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
@@ -363,8 +363,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also try out Random Forest."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -391,8 +398,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's see how these models perform on the actual World Cup!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -446,12 +460,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 436,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Test Score: 0.625\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Random Forest Test Score: {}\".format(\n",
     "    accuracy_score(test['home_win'], predict_test_data(test, X_train.columns, rf_model))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Impressive! We now have an idea of what our more advanced model should hope to achieve. "
    ]
   },
   {
